--- a/backend/transaction-bff/build.gradle
+++ b/backend/transaction-bff/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     /// SpringDoc
     implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-ui', version: '1.6.3'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.8'
 
