--- a/backend/transaction-bff/build.gradle
+++ b/backend/transaction-bff/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -35,9 +36,11 @@ dependencies {
 
     /// SpringDoc
     implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-ui', version: '1.6.3'
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.8'
+
+    implementation 'io.springfox:springfox-swagger2:3.0.0'
+
 
 }
 
