Atualizando o código anteriormente criado e criando LimiteDiarioController, LimiteDiarioService e LimiteDiarioRepository

--- a/backend/limites-svc/src/main/resources/application.yml
+++ b/backend/limites-svc/src/main/resources/application.yml
@@ -3,8 +3,9 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/limites
     hikari:
-      username: limite
-      password: limite_passwd
+      username: postgres
+      password: 123456
+
   jpa:
     properties:
       hibernate:
@@ -12,7 +13,7 @@ spring:
         temp:
           use_jdbc_metadata_defaults: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       generate-ddl: true
       show-sql: true
     generate-ddl: true
