--- a/backend/limites-svc/docker-compose-postgres.yml
+++ b/backend/limites-svc/docker-compose-postgres.yml
@@ -6,7 +6,7 @@ services:
     image: postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-limite}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-limite_passwd}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-limite_password}
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
