--- a/backend/limites-svc/build.gradle
+++ b/backend/limites-svc/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.4'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'idea'
+    id "org.flywaydb.flyway" version "8.4.3"
+
 }
 
 group = 'com.coffeeandit'
@@ -27,7 +30,19 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.flywaydb:flyway-core'
 }
+
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/limites'
+    user = 'postgres'
+    password = '123456'
+    driver = 'org.postgresql.Driver'
+}
+
+build.dependsOn(flywayMigrate)
+
 
 tasks.named('test') {
     useJUnitPlatform()
