--- a/backend/limites-svc/src/main/resources/application.yml
+++ b/backend/limites-svc/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8081
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -17,4 +19,8 @@ spring:
       generate-ddl: true
       show-sql: true
     generate-ddl: true
+
+
+limite:
+  valor: 2000
 
