--- a/backend/transaction-bff/build.gradle
+++ b/backend/transaction-bff/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation 'io.springfox:springfox-swagger2:3.0.0'
 
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
 
 }
 
