Atualizando o código para corrigir bugs

--- a/backend/limites-svc/docker-compose-postgres.yml
+++ b/backend/limites-svc/docker-compose-postgres.yml
@@ -5,8 +5,8 @@ services:
     container_name: postgres_container
     image: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-limite}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-limite_password}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-123456}
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
