--- a/backend/transaction-bff/build.gradle
+++ b/backend/transaction-bff/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     // Retry
     implementation 'org.springframework.retry:spring-retry:1.3.1'
 
+    // Kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'io.projectreactor.kafka:reactor-kafka'
+
 
     // Redis
 
