--- a/backend/transaction-bff/src/main/resources/application.yml
+++ b/backend/transaction-bff/src/main/resources/application.yml
@@ -1,13 +1,28 @@
-springdoc:
-  swagger-ui:
-    path: /swagger-ui.html
-  packagesToScan: br.coffeeandit.transactionbff.api
 spring:
+  kafka:
+    producer:
+      client-id: ${spring.application.name}
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      transaction-id-prefix: ${spring.application.name}
+    bootstrap-servers: localhost:9092
+
   data:
     redis:
       port: 6379
       host: localhost
       timeout: 5000
+  application:
+    name: transaction-bff
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  packagesToScan: br.com.coffeeandit.transactionbff.api
+
 
 limites:
   url: http://localhost:8081
+
+app:
+  topic: transaction
